--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,10 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.11",
     "nodemon": "^3.1.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.2"
   },
   "dependencies": {
+    "axios": "^1.7.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
