--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node bld/index.js",
-    "d": "nodemon bld/index.js"
+    "d": "nodemon bld/index.js",
+    "t": "tsc -w"
   },
   "author": "Isaiah Gardeen",
   "license": "ISC",
@@ -18,6 +19,7 @@
   "dependencies": {
     "axios": "^1.7.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "spotify-types": "^1.0.7"
   }
 }
